@@ -1,3 +1,8 @@
+2007-06-01 Borut Razem <borut.razem AT siol.net>
+
+	* index.php: added News - sdcc 2.7.0 release
+	* previous.php: previous news moved from index.php
+
 2007-05-26 Borut Razem <borut.razem AT siol.net>
 
 	* index.php: added News - sdcc 2.7.0 RC3
